--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon server"
+    "dev": "nodemon server",
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
